--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="service_stopped">Service stopped</string>
+    <string name="counted_to">Counted to %d</string>
+    <string name="service_started">Service started</string>
 </resources>
