--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="service_stopped">Service stopped</string>
     <string name="counted_to">Counted to %d</string>
     <string name="service_started">Service started</string>
-    <string name="log_file_name" translatable="false">FileLog.txt</string>
+    <string name="log_file_name" translatable="false">FileLog1.txt</string>
     <string name="show_db_content">Show database content</string>
     <string name="clear_db_content">Clear database content</string>
     <string name="clear_screen">Clear screen</string>
